--- a/cme.html
+++ b/cme.html
@@ -30,7 +30,7 @@
                                 <div id="breaks">
                                     <br><br><br>
                                 </div>
-                                <h2 id="calc_header"><strong>CALCULATOR</strong></h2>
+                                <h2 id="calc_header" style="font-family:verdana;"><strong>Fuel + Emissions <br>Calculator&nbsp;&nbsp;</strong></h2>
                                 <div id="breaks2">
                                     <br><br><br><br>
                                 </div>
@@ -107,7 +107,7 @@
                                                 <br><br>
                                             </div>
                                             <center>
-                                            <button id="getstats" type="button" onclick="changeCalc()">Get my stats</button>
+                                            <button id="getstats" type="button" onclick="changeCalc()">Calculate<br>fuel costs/emissions</button>
                                         </center>
 
                                         </form>
@@ -123,7 +123,7 @@
                                                 <input hidden type="text" name="sl5" id="sl5" style="width:40px;"><span hidden id="goAway11">&nbsp;days</span>
                                                 <br>
                                                 <br>
-                                                <label for="sl6"><span hidden id="goAway4">Design Speed:</span></label>
+                                                <label for="sl6"><span hidden id="goAway4">Speed:</span></label>
                                                 <input hidden type="text" name="sl6" id="sl6" style="width:40px;"><span hidden id="goAway12">&nbsp;kts</span>
                                                 <br>
                                                 <br>
@@ -132,7 +132,7 @@
                                                 <br>
                                                 <br>
                                                 <label for="sl8"><span hidden id="goAway6">Daily Fuel Consumption:&nbsp;&nbsp;&nbsp;</span></label>
-                                                <input hidden type="text" name="sl8" id="sl8" style="width:40px;" readonly><span hidden id="goAway14">&nbsp;mt</span>
+                                                <input hidden type="text" name="sl8" id="sl8" style="width:40px;"><span hidden id="goAway14">&nbsp;mt</span>
                                                 <br>
                                                 <br>
                                                 <label for="sl9"><span hidden id="goAway7">HFO:</span></label>
