--- a/cme.html
+++ b/cme.html
@@ -30,7 +30,7 @@
                                 <div id="breaks">
                                     <br><br><br>
                                 </div>
-                                <h2 id="calc_header" style="font-family:verdana;"><strong>Fuel + Emissions <br>Calculator&nbsp;&nbsp;</strong></h2>
+                                <h2 id="calc_header"><strong>Fuel + Emissions <br>Calculator&nbsp;&nbsp;</strong></h2>
                                 <div id="breaks2">
                                     <br><br><br><br>
                                 </div>
@@ -123,7 +123,7 @@
                                                 <input hidden type="text" name="sl5" id="sl5" style="width:40px;"><span hidden id="goAway11">&nbsp;days</span>
                                                 <br>
                                                 <br>
-                                                <label for="sl6"><span hidden id="goAway4">Speed:</span></label>
+                                                <label for="sl6"><span hidden id="goAway4">Design Speed:</span></label>
                                                 <input hidden type="text" name="sl6" id="sl6" style="width:40px;"><span hidden id="goAway12">&nbsp;kts</span>
                                                 <br>
                                                 <br>
